# DSGVO

./: .eslintrc.json  .gitignore  .warp.md  AGENTS.md  CHANGELOG.md  Claude.md  ENCRYPTION_DISABLED.md  GEMINI.md  OBSERVATION_DELETE_FEATURE.md  README.md  index.html  installwin.sh  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.claude/agents/: test-repair-specialist.md
.github/workflows/: build-macos.yml  release.yaml
.serena/: project.yml
.serena/memories/: DBerrorfixed.md  code_conventions.md  code_style_conventions.md  codebase_structure.md  project_overview.md  project_purpose.md  project_structure.md  suggested_commands.md  system_utilities.md  task_completion_guidelines.md  task_completion_requirements.md  tech_stack.md
coverage/.tmp/: coverage-0.json  coverage-1.json  coverage-10.json  coverage-2.json  coverage-3.json  coverage-4.json  coverage-5.json  coverage-6.json  coverage-7.json  coverage-8.json  (+1 more)
docs/: API.md  CHANGELOG_DELETE_FEATURES.md  DELETE_FEATURES.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DPIA.md  INSTALLATION.md  QUICK_INSTALL.md  README_DEPLOYMENT.md  Serena.lnk
src/: App.tsx
src-tauri/: Cargo.toml  Cargo2.toml  chatlog.txt  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: audit.rs  crypto.rs  database.rs  gdpr.rs  main.rs  p2p.rs
src-tauri/src/tests/: mod.rs
src-tauri/src/tests/integration/: mod.rs  sync_commands_test.rs  tauri_commands_test.rs
tests/: delete_observation.test.ts  integration.test.ts
(+26 files in other folders)
