[package]
name = "schuelerbeobachtung"
version = "0.1.0"
description = "GDPR-compliant student observation system with P2P synchronization"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri-plugin-shell = "2.0.0-beta.3"
tauri-plugin-fs = "2.0.0-beta.2"
tauri-plugin-dialog = "2.0.0-beta.2"
tauri-plugin-notification = "2.0.0-beta.2"
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
base64 = "0.22"
rustls = "0.22"
rustls-pemfile = "2.0"
tokio-rustls = "0.25"
mdns-sd = "0.10"
rcgen = "0.12"
keyring = "2.3"
chacha20poly1305 = "0.10"
rand = "0.8"
env_logger = "0.11.3"

libsqlite3-sys = { version = "0.27.0", features = ["session"] }
rusqlite = { version = "0.30", features = ["bundled", "limits"] }

x509-parser = "0.15"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
